--- a/package.json
+++ b/package.json
@@ -5,23 +5,29 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --no-clear",
+    "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+    "smui-theme-light": "smui-theme compile build/smui.css -i src/theme",
+    "smui-theme-dark": "smui-theme compile build/smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@smui/button": "latest",
+    "@smui/layout-grid": "latest",
+    "@smui/ripple": "latest",
+    "@smui/textfield": "latest",
+    "@smui/top-app-bar": "latest",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.38.0",
+    "smui-theme": "^4.2.0",
     "svelte": "^3.0.0",
-    "@smui/textfield": "latest",
-    "@smui/layout-grid": "latest",
-    "@smui/button": "latest",
-    "@smui/top-app-bar": "latest",
     "svelte-icons": "latest",
-    "@smui/ripple": "latest"
+    "svelte-preprocess": "^4.7.4"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
