--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,8 +9,12 @@
 name: Upload Python Package
 
 on:
+  push:
+    tags:
+      - '*'
   release:
     types: [published]
+  workflow_dispatch:
 
 permissions:
   contents: read
